fix: login with google button flicker

--- a/client/src/app/components/form/signup-form/signup-form.component.scss
+++ b/client/src/app/components/form/signup-form/signup-form.component.scss
@@ -3,3 +3,9 @@
 .signup-form {
   background-color: $background-dark-lighter-color;
 }
+
+// bandaid fix for sign up with google button jitter - error on google's end
+// source: https://stackoverflow.com/questions/69242615/prevent-sign-in-with-google-button-flickering-while-loading-when-centered-vertic
+.google-btn-container {
+  height: 44px;
+}
